--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,32 @@
   margin: 0;
 }
 
+html::-webkit-scrollbar {
+  width: 14px;
+}
+html::-webkit-scrollbar-thumb {
+  background-color: #17181d;
+  border-radius: 10px;
+  background-clip: padding-box;
+  border: 4px solid transparent;
+}
+html::-webkit-scrollbar-track {
+  background-color: transparent;
+  border-radius: 10px;
+}
+html::-webkit-scrollbar-button:start:decrement {
+  background-color: transparent;
+  height: 80px;
+}
+html::-webkit-scrollbar-button:end:increment {
+  background-color: transparent;
+  height: 192px;
+}
+html {
+  overflow: overlay;
+  scroll-behavior: smooth;
+}
+
 html,
 body {
   max-width: 100vw;
