--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,6 +32,18 @@ html {
 
 html,
 body {
+  display: flex;
+  flex-direction: column;
   max-width: 100vw;
   overflow-x: hidden;
+}
+
+button {
+  border: none;
+  background: transparent;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
